# conflicto

./: .env.example  .gitignore  Makefile  README.md  VALIDATION_CHECKLIST.md  openapi.json  reset-db.sh  run-tests.sh  start-dev.sh  stop-dev.sh
.copilot/: activities.md  architecture.md  github-mcp.md  iac.md  instructions.md  issue-workflow.md  personas.md  slash-commands.md  tech-stack.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.yml  technical_debt.yml
.github/prompts/: conflictoIssue.prompt.md  createIssues.md  implementIssue.prompt.md  updateProcessedDocs.prompt.md
.github/scripts/: deploy-health-check.sh  test-backend.sh  test-frontend.sh
.github/workflows/: codeql.yml  deploy-backend.yml  deploy-dev.yml  deploy-frontend.yml  deploy-prod.yml  main-ci.yml  pr-checks.yml  reset-database.yml  rollback.yml
.mcp/: server-config.json
ai-docs/: README.md
ai-docs/architecture/: activity-system-design.md  backend-refinement-summary.md  caja-app-features.md  caja-app-goals.md  copilot-rules-plan.md  deployment-strategy.md  github_copilot_commands.md  system-overview.md  tech-stack.md  technical_decisions_log.md
ai-docs/transcripts/: 03-technical-discovery.md  04-backend-refinement.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SETUP_IMPROVEMENTS.md  alembic.ini  debug_activity.py  docker-compose.yml  pyproject.toml  reset-db  reset-db.sh  run-tests.sh  setup-windows.sh  setup.sh  start-dev.sh  stop-dev.sh  test_import.py  test_minimal.py  test_simple.py  validate-setup.sh
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  logging.py  settings.py
backend/app/db/: database.py  enums.py  models.py
backend/app/db/models/: activity.py  user_response.py
backend/app/models/: schemas.py
backend/app/models/jsonb_schemas/: __init__.py  activity.py  new_activity.py  user_response.py
backend/app/models/schemas/: new_activity.py
backend/app/routes/: activities.py  health.py  new_activities.py  participants.py  sessions.py  user_responses.py
backend/app/services/: activity_service.py  new_activity_service.py  participant_service.py  session_service.py  user_response_service.py
backend/app/services/activity_framework/: __init__.py  base.py  registration.py  registry.py  state_machine.py
backend/app/services/activity_types/: __init__.py  polling.py  qna.py  word_cloud.py
backend/app/tests/: test_status_polling.py
backend/migrations/: env.py
backend/migrations/versions/: 16f52f3cf49a_add_missing_created_at_updated_at_.py  21f24228dbb3_add_qr_code_fields_to_participants_table.py  3edee9ecd4f6_add_activity_framework_fields.py  56548b08d0ae_add_jsonb_user_response_storage.py  7b81da24b89f_rename_new_activities_table_to_.py  82b55c1f3822_update_participants_for_qr_code_.py  8314e302ee91_add_display_name_role_and_is_active_to_.py  a663bb0881d7_initial_migration.py  cfd73cc57d31_initial_migration_clean_slate.py  f35d7574c2e4_merge_migration_heads.py  update_participants_for_qr_onboarding.py
backend/scripts/: health-check.py  migrate.py
backend/tests/: conftest.py  test_activities.py  test_debug.py  test_health.py  test_models.py  test_new_activities.py  test_participant_service.py  test_session_participants.py  test_sessions.py  test_status_polling.py  test_user_response_service.py  test_user_responses.py
docs/: BACKEND_SETUP_COMPLETE.md  CICD_ECS_DEPLOYMENT.md  CICD_QUICKSTART.md  DEVELOPMENT.md  GITHUB_ACTIONS_OIDC.md  IAM_OIDC_SETUP.md  ISSUE_7_IMPLEMENTATION_COMPLETE.md  MAKEFILE.md  README.md  SETUP_SUMMARY.md
docs/deployment/: DEPLOYMENT_GUIDE.md  ROLLBACK_PROCEDURES.md
docs/dns/: migration-checklist.md
docs/runbooks/: DEV_DEPLOYMENT.md  PROD_DEPLOYMENT.md
frontend/: .cta.json  .env.example  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md  index.html  jest.config.js  nginx.conf  openapi.json  orval.config.js  orval.config.ts  package-lock.json  package.json  test-package.json  vite.config.ts  vitest.config.ts
frontend/docs/: API_INTEGRATION.md  ISSUE_32_COMPLETION.md  README.md  (+1 more)
iac/: README.md
infrastructure/: README.md
migrations_backup_20251008_224331/: env.py
processed/: caja_app_features.md  caja_app_goals.md  copilot_rules_plan.md
scripts/: aws_sso_login.sh  check_nameservers.sh  expected_ns.conf  validate_network.sh
transcripts/: 01-intro.md  02-requirements-discussion.md
(+176 files in other folders)
